# ui-ai-generator

./: README.md  package-lock.json
client/: .env  README.md  package-lock.json  package.json  tailwind.config.ts
client/public/fonts/Geist/: demo.html  stylesheet.css
client/src/components/chats/: EachMessage.tsx
client/src/components/tools/: LiveCodeExecutor.tsx
client/src/libs/: toastify.ts  useAutosizeTextArea.ts
client/src/pages/: index.tsx  test.tsx
client/src/pages/api/: chats.ts
client/src/pages/api/messages/: [slug].ts  set-rating.ts
client/src/pages/api/messages/delete/: [id].ts
client/src/pages/api/messages/delete-group/: [id].ts
client/src/styles/: fonts.css  globals.css
client/src/types/: chats.ts
ui-generator-server/: Cargo.toml
ui-generator-server/migration/: Cargo.toml  README.md
ui-generator-server/migration/src/: create_chat_members_table.rs  create_chats_table.rs  create_messages_table.rs  create_users_table.rs  create_verifications_table_2023_01_24.rs  lib.rs
ui-generator-server/server/: Cargo.toml
ui-generator-server/server/src/: main.rs
ui-generator-server/server/src/app/handler/: chat.rs
ui-generator-server/server/src/app/infra/: cors.rs  database.rs  mod.rs
ui-generator-server/server/src/domain/dtos/: chat_dto.rs  mod.rs
ui-generator-server/server/src/domain/entities/: app_state.rs  chat_member_model.rs  chat_model.rs  message_model.rs  mod.rs  settings_model.rs  user_model.rs  verification_model.rs
ui-generator-server/server/src/exception/: error.rs
