[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.6.20", features = ["ws", "headers"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
http = "1.0.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart"] }
sea-orm = { version = "0.11.3", features = [
    'sqlx-postgres',
    'runtime-tokio-rustls',
    'macros',
    'debug-print',
]}
serde = "1.0.194"
serde_json = "1.0.110"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.4.1", features = [
  "fs",
  "add-extension",
  "trace",
  "cors",
  "util",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6.1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
